syntax = "proto3";

package co.topl.grpc.services;

service ToplGrpc {
  rpc BroadcastTx (BroadcastTxReq) returns (BroadcastTxRes);
  rpc BlockAdoptions (BlockAdoptionsReq) returns (stream BlockAdoptionsRes);
}

message BroadcastTxReq {
  bytes transmittableBytes = 1;
}

message BroadcastTxRes {}

message BlockAdoptionsReq {}
message BlockAdoptionsRes {
  bytes blockId = 1;
}
